// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - default - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": undefined,
      "className": "{}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "ellipsis": undefined,
      "id": "default",
      "italic": undefined,
      "mark": undefined,
      "strong": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.code: true - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - properties.code: true - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": <HtmlComponent
        html="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "className": "{}",
      "code": true,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "ellipsis": undefined,
      "id": "properties.code: true",
      "italic": undefined,
      "mark": undefined,
      "strong": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.content - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - properties.content - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": <HtmlComponent
        html="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "className": "{}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "ellipsis": undefined,
      "id": "properties.content",
      "italic": undefined,
      "mark": undefined,
      "strong": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.content short - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - properties.content short - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": <HtmlComponent
        html="This is a paragraph. It is a text component, and part of the 'Display Blocks' elements available.
"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "className": "{}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "ellipsis": undefined,
      "id": "properties.content short",
      "italic": undefined,
      "mark": undefined,
      "strong": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.copyable: icon - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - properties.copyable: icon - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": <HtmlComponent
        html="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "className": "{}",
      "code": undefined,
      "copyable": Object {
        "icon": <AntIcon
          basePath=""
          blockId="properties.copyable: icon_copyable_icon"
          components={Object {}}
          content={Object {}}
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [Function],
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties="AiOutlineWarning"
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />,
        "onCopy": [Function],
        "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
",
        "tooltips": undefined,
      },
      "delete": undefined,
      "disabled": undefined,
      "ellipsis": undefined,
      "id": "properties.copyable: icon",
      "italic": undefined,
      "mark": undefined,
      "strong": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.copyable: icon: [] - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - properties.copyable: icon: [] - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": <HtmlComponent
        html="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "className": "{}",
      "code": undefined,
      "copyable": Object {
        "icon": Array [
          <AntIcon
            basePath=""
            blockId="properties.copyable: icon: []_copyable_before_icon"
            components={Object {}}
            content={Object {}}
            events={Object {}}
            list={Array []}
            menus={Array []}
            methods={
              Object {
                "makeCssClass": [Function],
                "registerEvent": [Function],
                "registerMethod": [Function],
                "triggerEvent": [Function],
              }
            }
            properties="AiOutlineWarning"
            required={false}
            user={Object {}}
            validation={
              Object {
                "errors": Array [],
                "status": null,
                "warnings": Array [],
              }
            }
          />,
          <AntIcon
            basePath=""
            blockId="properties.copyable: icon: []_copyable_after_icon"
            components={Object {}}
            content={Object {}}
            events={Object {}}
            list={Array []}
            menus={Array []}
            methods={
              Object {
                "makeCssClass": [Function],
                "registerEvent": [Function],
                "registerMethod": [Function],
                "triggerEvent": [Function],
              }
            }
            properties="AiOutlineRocket"
            required={false}
            user={Object {}}
            validation={
              Object {
                "errors": Array [],
                "status": null,
                "warnings": Array [],
              }
            }
          />,
        ],
        "onCopy": [Function],
        "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
",
        "tooltips": undefined,
      },
      "delete": undefined,
      "disabled": undefined,
      "ellipsis": undefined,
      "id": "properties.copyable: icon: []",
      "italic": undefined,
      "mark": undefined,
      "strong": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.copyable: text: one - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - properties.copyable: text: one - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": <HtmlComponent
        html="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "className": "{}",
      "code": undefined,
      "copyable": Object {
        "icon": undefined,
        "onCopy": [Function],
        "text": "one",
        "tooltips": undefined,
      },
      "delete": undefined,
      "disabled": undefined,
      "ellipsis": undefined,
      "id": "properties.copyable: text: one",
      "italic": undefined,
      "mark": undefined,
      "strong": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.copyable: tooltips: [] - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - properties.copyable: tooltips: [] - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": <HtmlComponent
        html="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "className": "{}",
      "code": undefined,
      "copyable": Object {
        "icon": undefined,
        "onCopy": [Function],
        "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
",
        "tooltips": Array [
          "Click to copy",
          "Copy done",
        ],
      },
      "delete": undefined,
      "disabled": undefined,
      "ellipsis": undefined,
      "id": "properties.copyable: tooltips: []",
      "italic": undefined,
      "mark": undefined,
      "strong": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.copyable: true - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - properties.copyable: true - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": <HtmlComponent
        html="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "className": "{}",
      "code": undefined,
      "copyable": Object {
        "onCopy": [Function],
        "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
",
      },
      "delete": undefined,
      "disabled": undefined,
      "ellipsis": undefined,
      "id": "properties.copyable: true",
      "italic": undefined,
      "mark": undefined,
      "strong": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.delete: true - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - properties.delete: true - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": <HtmlComponent
        html="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "className": "{}",
      "code": undefined,
      "copyable": undefined,
      "delete": true,
      "disabled": undefined,
      "ellipsis": undefined,
      "id": "properties.delete: true",
      "italic": undefined,
      "mark": undefined,
      "strong": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.disabled: true - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - properties.disabled: true - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": <HtmlComponent
        html="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "className": "{}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": true,
      "ellipsis": undefined,
      "id": "properties.disabled: true",
      "italic": undefined,
      "mark": undefined,
      "strong": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.ellipsis: expandable, rows - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - properties.ellipsis: expandable, rows - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": <HtmlComponent
        html="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "className": "{}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "ellipsis": Object {
        "expandable": true,
        "onExpand": [Function],
        "rows": 3,
        "suffix": undefined,
      },
      "id": "properties.ellipsis: expandable, rows",
      "italic": undefined,
      "mark": undefined,
      "strong": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.ellipsis: rows - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - properties.ellipsis: rows - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": <HtmlComponent
        html="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "className": "{}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "ellipsis": Object {
        "expandable": undefined,
        "onExpand": [Function],
        "rows": 3,
        "suffix": undefined,
      },
      "id": "properties.ellipsis: rows",
      "italic": undefined,
      "mark": undefined,
      "strong": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.ellipsis: rows, suffix - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - properties.ellipsis: rows, suffix - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": <HtmlComponent
        html="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "className": "{}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "ellipsis": Object {
        "expandable": undefined,
        "onExpand": [Function],
        "rows": 3,
        "suffix": "and other",
      },
      "id": "properties.ellipsis: rows, suffix",
      "italic": undefined,
      "mark": undefined,
      "strong": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.ellipsis: true - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - properties.ellipsis: true - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": <HtmlComponent
        html="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "className": "{}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "ellipsis": true,
      "id": "properties.ellipsis: true",
      "italic": undefined,
      "mark": undefined,
      "strong": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.italic: true - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - properties.italic: true - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": <HtmlComponent
        html="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "className": "{}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "ellipsis": undefined,
      "id": "properties.italic: true",
      "italic": true,
      "mark": undefined,
      "strong": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.mark: true - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - properties.mark: true - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": <HtmlComponent
        html="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "className": "{}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "ellipsis": undefined,
      "id": "properties.mark: true",
      "italic": undefined,
      "mark": true,
      "strong": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.strong: true - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - properties.strong: true - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": <HtmlComponent
        html="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "className": "{}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "ellipsis": undefined,
      "id": "properties.strong: true",
      "italic": undefined,
      "mark": undefined,
      "strong": true,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: danger - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - properties.type: danger - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": <HtmlComponent
        html="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "className": "{}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "ellipsis": undefined,
      "id": "properties.type: danger",
      "italic": undefined,
      "mark": undefined,
      "strong": undefined,
      "type": "danger",
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: secondary - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - properties.type: secondary - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": <HtmlComponent
        html="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "className": "{}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "ellipsis": undefined,
      "id": "properties.type: secondary",
      "italic": undefined,
      "mark": undefined,
      "strong": undefined,
      "type": "secondary",
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: warning - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - properties.type: warning - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": <HtmlComponent
        html="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "className": "{}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "ellipsis": undefined,
      "id": "properties.type: warning",
      "italic": undefined,
      "mark": undefined,
      "strong": undefined,
      "type": "warning",
      "underline": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.underline: true - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - properties.underline: true - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": <HtmlComponent
        html="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "className": "{}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "ellipsis": undefined,
      "id": "properties.underline: true",
      "italic": undefined,
      "mark": undefined,
      "strong": undefined,
      "type": undefined,
      "underline": true,
    },
    Object {},
  ],
]
`;

exports[`Mock render - with html content - value[0] - Paragraph 1`] = `mocked`;

exports[`Mock render - with html content - value[0] - Paragraph 2`] = `
Array [
  Array [
    Object {
      "children": <HtmlComponent
        html=<div style="background-color:blue;color:white;">
  Lorem ipsum dolor sit amet...
</div>
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "className": "{}",
      "code": undefined,
      "copyable": undefined,
      "delete": undefined,
      "disabled": undefined,
      "ellipsis": undefined,
      "id": "with html content",
      "italic": undefined,
      "mark": undefined,
      "strong": undefined,
      "type": undefined,
      "underline": undefined,
    },
    Object {},
  ],
]
`;
